--- a/shinyApp/Readme.Rmd
+++ b/shinyApp/Readme.Rmd
@@ -1,3 +1,9 @@
 ## app.R
 
-- The ShinyApp was made to supplement analysis of data and visualization for specific genes. It shows gene expression distribution, eQTM output and gene-probe pair correlation plots. 
+- The ShinyApp was made to supplement analysis and visualization of data for selected genes. It shows,
+
+      --gene expression distribution,
+
+      --eQTM output and 
+
+      --gene-probe pair correlation plots. 
