--- a/Step-2-Single Probe Analysis/Step-2.Rmd
+++ b/Step-2-Single Probe Analysis/Step-2.Rmd
@@ -223,6 +223,8 @@ min(lapply_results_PCA$adjusted.pvalue)
 #saveRDS(m[[30]], "subjects_genes_PCA_adjusted_V4.RDS")
 ```
 
+Histogram of p-value on correlation tests. After adjusting for 30 PCs in gene expression data and 1 PC in DNA methylation probe data, histogram of p-values are graphed. Because of the peak when p-value is very close to 0, we see that the null hypothesis of no significances on DNA methylation probe and gene pair is highly unlikely. Consequently, the current states of these two data sets seem to be suitable for our analysis.
+
 #Look at some random genes individually
 
 We will plot the pvalues based on the number of adjusted PCs in the DNA methylation data set and gene expression data set and observe what happens.
