--- a/Code/Step4/step4.Rmd
+++ b/Code/Step4/step4.Rmd
@@ -69,13 +69,19 @@ inds=cbind(match_probes,matche_genes)
 
 match_data <- data[inds]
 
+
+
 qplot(match_data,
       geom="histogram",
       main = "The distance of methylated CpG sites from Trascription Start Sites", 
       xlab = "methylated CpG sites distance from TSS",  
       fill=I("blue"), 
       col=I("red"), 
-      ) +theme_minimal()
+      ) +theme_minimal() + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
+panel.background = element_blank(), axis.line = element_line(colour = "black"))
+
+
+
 ```
 
 **The histogram clearly shows that the majority of methylated CpG sites are concentrated near the transcription start sites (TSS) of genes.** 
@@ -101,27 +107,31 @@ elemenets_in_this_interval <-which(intervals_values==i);
 histog[i]=mean(filtered_pvalue$adjusted.pvalue[elemenets_in_this_interval])
 print((histog[i]))
 }
-
-
 x=tmp$mids;
 y=histog;
 data_plot=cbind(x,y)
 data_plot=as.data.frame(data_plot)
-colnames(data_plot)=c("CpG_site_distance","Average_of_adjusted_Pvalue")
+colnames(data_plot)=c("CpG_Site_distance","Average_of_adjusted_Pvalue")
 
-data_plot %>% ggplot2::ggplot(aes(x= CpG_site_distance, y=Average_of_adjusted_Pvalue)) +geom_line(color='steelblue', size=2 )+ ggtitle ("The distance of significant methylated CpG sites from TSS")+ theme_minimal()
+data_plot %>% ggplot2::ggplot(aes(x= CpG_site_distance, y=Average_of_adjusted_Pvalue)) +geom_line(color='steelblue', size=2 )+ ggtitle ("The distance of significant methylated CpG sites from TSS") + theme_minimal()
 
 ```
 
 **The bar grapgh shows that the methylated CpG sites with significant P values are located in the close distance from TSS. This result is consistant with previous data which showed that CpG sites are relatively enriched around transcription start sites of genes[ref].**
 
 ```{r}
+
+
 x=tmp$mids;
 y=histog;
 data_plot=cbind(x,y)
 data_plot=as.data.frame(data_plot)
 colnames(data_plot)=c("CpG_site_distance","Average_of_adjusted_Pvalue")
-data_plot %>% ggplot2::ggplot(aes(x= CpG_site_distance, y=Average_of_adjusted_Pvalue)) +geom_bar(stat="identity",fill="Green4")+ggtitle ("The distance of significant methylated CpG sites from TSS")+ theme_minimal()
+data_plot %>% ggplot2::ggplot(aes(x= CpG_site_distance, y=Average_of_adjusted_Pvalue)) +geom_bar(stat="identity",fill="Green4")+ggtitle ("The distance of significant methylated CpG sites from TSS")+ theme_minimal()+theme_minimal() + theme(panel.grid.major = element_blank(), panel.grid.minor = element_blank(),
+panel.background = element_blank(), axis.line = element_line(colour = "black"))
+
+
+
 ```
 
 
