--- a/Step-2-Single Probe Analysis/Readme.Rmd
+++ b/Step-2-Single Probe Analysis/Readme.Rmd
@@ -15,4 +15,28 @@ output: html_document
 
 ## Data
 
-- The Data directory consists of any data sets relevant to Step 2
+Here is a description of the data sets that are relevant in Step 2. No data sets are saved in this file since the data sets are too large to be uploaded in github, so they can be found in the links below.
+
+### rosmap_postprocV2.RData
+
+- The data sets produced here consists of the results from Step 1. The .RData folder consists of three data sets: probes_subjects, subjects_genes, and probes_genes_distance. The probes_subjects data consists of DNA methylation probe data, subjects_genes consists of gene expression values, and probes_genes_distance consists of the distances on probes and genes where 0 represents a distance over 1Mb. Since it is too large to be uploaded in github, the data set could be found in this Google Drive Folder:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY?usp=sharing
+
+### cor_test_results_PCA_lapply_V4.rds
+
+- The data set consists of the results on all correlation tests between probe and gene pair. This data set is used in Step 3 and Step 4. It is too large to be uploaded in github, so the link to the data set could be found here:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
+
+### probes_subjects_PCA_adjusted_V4.RDS
+
+- The data set consists of probes_subjects from rosmap_postprocV2.RData which is the DNA Methylation probe data adjusted for 5 PCs. The data set could be found in the link here:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
+
+### subjects_genes_PCA_adjusted_V4.RDS
+
+- The data set consists of subjects_genes from rosmap_postprocV2.RData which is the gene expression data adjusted for 30 PCs. The data set could be found in the link here:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
