--- a/Step-4-BIological Plausibility/step4.Rmd
+++ b/Step-4-BIological Plausibility/step4.Rmd
@@ -17,7 +17,8 @@ library(purrr)
 library(data.table)
 ```
 ### Loading data
-We load data set from Step 1:probes_subjects that contains DNA methylation probe values, subjects_genes that contains gene expression values, and probes_genes_distance that is a sparse matrix containing the distances between a gene and a probe.Note that probes_genes_distance is 0 when probe and gene distance is over 1Mb.
+We load dataset from Step 1:probes_subjects that contains DNA methylation probe values, subjects_genes that contains gene expression values, and probes_genes_distance that is a sparse matrix containing the distances between a gene and a probe.Note that probes_genes_distance is 0 when probe and gene distance is over 1Mb.
+
 ```{r}
 RosmapData <- load("C:/Users/zohre/Desktop/Repo_team_Gene_Heroes/Data/rosmap_postprocV2.RData")
 probes_subjects[1:5, 1:5]
@@ -28,15 +29,14 @@ str(RosmapData)
 nrow(probes_genes_distance) #number of probes
 ncol(probes_genes_distance) #number of genes
 ```
-WE also load a data set from eQTM analysis that we have peroformed in Step 2, including all the adjusted P values for analysing single probes.
+WE also load a dataset from eQTM analysis that we have peroformed in Step 2, including all the adjusted P-values for analyzing single probes.
 ```{r}
-cor_test_results_PCA_lapply_V4 <- readRDS("C:/Users/zohre/Desktop/Repo_team_Gene_Heroes/Code/Step4/cor_test_results_PCA_lapply_V4.rds")
+cor_test_results_PCA_lapply_V4 <- readRDS("C:/Users/zohre/Desktop/Repo_team_Gene_Heroes/Data/cor_test_results_PCA_lapply_V4.rds")
 head (cor_test_results_PCA_lapply_V4)
 
 ```
-### setting a cut of 0.05 for "adjusted P value"
-
-Next, We extract three columns including gene, probe, and adjusted P value and filtering the genes based on adjusted P value that are greater than 0.05 .
+### Setting a cut of 0.05 for "adjusted P-value"
+Next, We extract three columns including gene, probe, and adjusted P value and filtering the genes based on adjusted P-value that are greater than 0.05.
 
 ```{r}
 
@@ -48,6 +48,8 @@ nrow(extracted_matrix)
 filtered_pvalue <- extracted_matrix[extracted_matrix$adjusted.pvalue<0.05,]
 
 ```
+
+
 ### Merging two data sets
 We create a new data set with the subject_genes as columns and probe_subjects as rows of data.Then, we match the probes and genes from two data sets.Finally, we plot the histogram of our data to see the distance of the methylated CpG sites from transcription start site (TSS) of the genes.     
 ```{r}
@@ -84,10 +86,10 @@ panel.background = element_blank(), axis.line = element_line(colour = "black"))
 
 ```
 
-**The histogram clearly shows that the majority of methylated CpG sites are concentrated near the transcription start sites (TSS) of genes.** 
+**The histogram shows that the majority of methylated CpG sites are concentrated near the transcription start sites (TSS) of genes.** 
 
 
-Next, we get the mean of adjusted P value for each bin of histogram (number of methylated CpG sites) to check the distance of the significant probes from TSS.  
+Next, we get the mean of adjusted P-value for each bin of histogram (number of methylated CpG sites) to check the distance of the significant probes from TSS.  
 
 ```{r} 
 
@@ -98,7 +100,7 @@ intervals_values=findInterval(match_data,tmp$breaks)  #get the interval values f
 
 ```
 
-Using a for loop function to get the interval values for all the genes.Then, we generate a geome line plot of adjusted P value for all the methylated CpG sites in genes promoters.
+Using a for loop function to get the interval values for all the genes. Then, we generate a genome-line plot of adjusted P-value for all the methylated CpG sites in the genes promoters.
 
 ```{r}
 histog <-  integer (10)
@@ -111,13 +113,13 @@ x=tmp$mids;
 y=histog;
 data_plot=cbind(x,y)
 data_plot=as.data.frame(data_plot)
-colnames(data_plot)=c("CpG_Site_distance","Average_of_adjusted_Pvalue")
+colnames(data_plot)= c("CpG_Site_distance","Average_of_adjusted_Pvalue")
 
-data_plot %>% ggplot2::ggplot(aes(x= CpG_site_distance, y=Average_of_adjusted_Pvalue)) +geom_line(color='steelblue', size=2 )+ ggtitle ("The distance of significant methylated CpG sites from TSS") + theme_minimal()
+data_plot %>% ggplot2::ggplot(aes(x= CpG_Site_distance, y=Average_of_adjusted_Pvalue)) +geom_line(color='steelblue', size=2 )+ ggtitle ("The distance of significant methylated CpG sites from TSS") + theme_minimal()
 
 ```
 
-**The bar grapgh shows that the methylated CpG sites with significant P values are located in the close distance from TSS. This result is consistant with previous data which showed that CpG sites are relatively enriched around transcription start sites of genes[ref].**
+**The bar graph shows that the methylated CpG sites with significant P values are in the close distance from TSS. This result is consistent with previous data which showed that CpG sites are relatively enriched around transcription start sites of genes (Numata et al., 2012; Saxonov, Berg, & Brutlag, 2006).**
 
 ```{r}
 
@@ -133,7 +135,7 @@ panel.background = element_blank(), axis.line = element_line(colour = "black"))
 
 
 ```
-
+### Conclusion:
 
 
 
