--- a/Step-4-BIological Plausibility/step4.Rmd
+++ b/Step-4-BIological Plausibility/step4.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Step4-Biological Analysis-part 1"
+title: "Step4-Biological Plausibility-spatial distribution of methylated CpG sites"
 author: "Zohreh Sharafian"
 date: "March 24, 2018"
 output: github_document
@@ -135,7 +135,7 @@ panel.background = element_blank(), axis.line = element_line(colour = "black"))
 
 
 ```
-### Conclusion:
+
 
 
 
