--- a/Step-4-BIological Plausibility/Readme.Rmd
+++ b/Step-4-BIological Plausibility/Readme.Rmd
@@ -5,7 +5,7 @@ date: '2018-04-02'
 output: github_document
 ---
 
-## step4.Rmd and step4.md 
+## step4.Rmd and step4.md : Biological Plausibility
 
  - Assess the spatial distribution of significant methylation probes according to their distance from genes
  - Analyze the distribution of significant methylation probes in different chromatin states using ChromHMM
@@ -22,4 +22,22 @@ output: github_document
 
 ## Data
 
-- This directory will include a description of the data links and the data sets involved in Step 4
+- Here is a description of the data sets that are relevant in Step 4. No data sets are saved in this file since the data sets are too large to be uploaded in github, so they can be found in the links below.
+
+### rosmap_postprocV2.RData
+
+- The data sets produced here consists of the results from Step 1. The .RData folder consists of three data sets: probes_subjects, subjects_genes, and probes_genes_distance. The probes_subjects data consists of DNA methylation probe data, subjects_genes consists of gene expression values, and probes_genes_distance consists of the distances on probes and genes where 0 represents a distance over 1Mb. Since it is too large to be uploaded in github, the data set could be found in this Google Drive Folder:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY?usp=sharing
+
+### cor_test_results_PCA_lapply_V4.rds
+
+- The data set consists of the results on all correlation tests between probe and gene pair. This data set is used in Step 3 and Step 4. It is too large to be uploaded in github, so the link to the data set could be found here:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
+
+### probes_subjects_PCA_adjusted_V4.RDS
+
+- The data set consists of probes_subjects from rosmap_postprocV2.RData which is the DNA Methylation probe data adjusted for 5 PCs. The data set could be found in the link here:
+
+https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
