--- a/Step-4-BIological Plausibility/Readme.Rmd
+++ b/Step-4-BIological Plausibility/Readme.Rmd
@@ -32,12 +32,7 @@ https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY?usp=sha
 
 ### cor_test_results_PCA_lapply_V4.rds
 
-- The data set consists of the results on all correlation tests between probe and gene pair. This data set is used in Step 3 and Step 4. It is too large to be uploaded in github, so the link to the data set could be found here:
+- The data set consists of the results on all correlation tests between probe and gene pair. It is too large to be uploaded in github, so the link to the data set could be found here:
 
 https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
 
-### probes_subjects_PCA_adjusted_V4.RDS
-
-- The data set consists of probes_subjects from rosmap_postprocV2.RData which is the DNA Methylation probe data adjusted for 5 PCs. The data set could be found in the link here:
-
-https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
