--- a/Step-4-BIological Plausibility/Readme.Rmd
+++ b/Step-4-BIological Plausibility/Readme.Rmd
@@ -5,17 +5,17 @@ date: '2018-04-02'
 output: github_document
 ---
 
-## step4.Rmd and step4.md : Biological Plausibility
+## step4.Rmd and step4.md : spatial distribution of methylated CpG sites.md and spatial distribution of methylated CpG sites.Rmd
 
  - Assess the spatial distribution of significant methylation probes according to their distance from genes
  - Analyze the distribution of significant methylation probes in different chromatin states using ChromHMM
- - Rank the genes based on the number of significant corresponding probes as an indicator for the multifunctionality of the gene
+  
+
+## Biological Plausibility_geneset_enrichment_analysis.md and geneset enrichment analysis.Rmd
+
+- Rank the genes based on the number of significant corresponding probes as an indicator for the multifunctionality of the gene
  - Gene set enrichment analysis to find the relationship between the number of significant probes and the complexity of gene regulation using erminR
-
-## geneset_enrichment_analysis.md and geneset enrichment analysis.Rmd
-
-- Please describe the geneset_enrichment_analysis.md and geneset enrichment analysis.Rmd contents in point form
-
+ 
 ## step4_files (Images Folder)
 
 - This directory consists of the images output from Step-4.md
@@ -35,4 +35,7 @@ https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY?usp=sha
 - The data set consists of the results on all correlation tests between probe and gene pair. It is too large to be uploaded in github, so the link to the data set could be found here:
 
 https://drive.google.com/drive/folders/1u7J2reJVtPl2IVVytpTqWqJm-76lu0OY 
+
+### Gene set enrichment dataset
+
 
