--- a/Step-1-Data Processing/Readme.Rmd
+++ b/Step-1-Data Processing/Readme.Rmd
@@ -7,12 +7,10 @@ output: github_document
 
 ## a-clust
 
--Describe the contents in a-clust (point form)
+-This file includes the source code for the A-clust package, in addition, to source codes written by us to use the package in a convenient way for our application.
 
 ## Step1.md and Step1.Rmd
-
-Please describe the code in Step1 (point form)
-
+In this file, we explain the process of organizing data into an R-friendly format and extracting the essential part of data from the ROSMAP dataset. We then go through the multicollinearity issue in our CpG probes and how we correct it. We then assess the outliers in gene expression and methylation data.
 ## project_data_description.Rmd and project_data_description.md
 
 - These files provides a detailed description of the raw data set we have obtained for our project. It describes the ROSMAP data sets.
